Change names tags for labels in the labels sections

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -242,7 +242,7 @@
                       {% endfor %}
                       <a href="javascript:$('#print_tags').submit()" class="dropdown-item">
                         <i class="bi bi-x"></i>
-                        Print tags
+                        Print labels
                       </a>
                     </form>
                   </li>
