--- a/ereuse_devicehub/templates/inventory/print_tags.html
+++ b/ereuse_devicehub/templates/inventory/print_tags.html
@@ -2,11 +2,11 @@
 {% block main %}
 
 <div class="pagetitle">
-  <h1>Print tags</h1>
+  <h1>Print Labels</h1>
   <nav>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="{{ url_for('inventory.taglist')}}">Tag management</a></li>
-      <li class="breadcrumb-item active">Print Tags</li>
+      <li class="breadcrumb-item active">Print Labels</li>
     </ol>
   </nav>
 </div><!-- End Page Title -->
@@ -18,7 +18,7 @@
       <div class="card">
               <div class="card-body">
                 <div class="pt-4 pb-2">
-                  <h5 class="card-title text-center pb-0 fs-4">Print Tags</h5>
+                  <h5 class="card-title text-center pb-0 fs-4">Print Labels</h5>
                   <p class="text-center small">{{ title }}</p>
                 </div>
 
