--- a/ereuse_devicehub/templates/inventory/tag_detail.html
+++ b/ereuse_devicehub/templates/inventory/tag_detail.html
@@ -40,7 +40,7 @@
                 </div>
               </div>
 
-              <h5 class="card-title">Print details</h5>
+              <h5 class="card-title">Print Label</h5>
               <div class="row">
                 <div class="col-lg-3 col-md-4">
                   <div style="width:256px; height:148px; border: solid 1px; padding: 10px;">
