change label for labels

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -181,7 +181,7 @@
     <li class="nav-heading">Utils</li>
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="{{ url_for('label.label_list')}}">
+      <a class="nav-link collapsed" href="{{ url_for('labels.label_list')}}">
         <i class="bi bi-tags"></i>
         <span>Tags</span>
       </a>
