--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -236,7 +236,7 @@
                     </a>
                   </li>
                   <li>
-                    <form id="print_labels" method="post" action="{{ url_for('label.print_labels') }}">
+                    <form id="print_labels" method="post" action="{{ url_for('labels.print_labels') }}">
                       {% for f in form_print_labels %}
                         {{ f }}
                       {% endfor %}
@@ -346,7 +346,7 @@
                       </td>
                       <td>
                         {% for t in dev.tags | sort(attribute="id") %}
-                         <a href="{{ url_for('label.label_details', id=t.id)}}">{{ t.id }}</a>
+                         <a href="{{ url_for('labels.label_details', id=t.id)}}">{{ t.id }}</a>
                          {% if not loop.last %},{% endif %}
                         {% endfor %}
                       </td>
