--- a/ereuse_devicehub/templates/labels/label_detail.html
+++ b/ereuse_devicehub/templates/labels/label_detail.html
@@ -5,7 +5,7 @@
   <h1>Inventory</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="{{ url_for('label.label_list')}}">Tag management</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('labels.label_list')}}">Tag management</a></li>
       <li class="breadcrumb-item active">Tag details {{ tag.id }}</li>
     </ol>
   </nav>
