--- a/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div class="col-xl-8">
+    <div class="col-xl-8 d-none"><!-- TODO (hidden until is implemented )-->
 
       <div class="card">
         <div class="card-body pt-3">
