Add link to help.usody.com

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -53,7 +53,7 @@
           </li>
 
           <li>
-            <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
+            <a class="dropdown-item d-flex align-items-center" href="https://help.usody.com/" target="_blank">
               <i class="bi bi-question-circle"></i>
               <span>Need Help?</span>
             </a>
