--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -38,14 +38,14 @@
             <div><!-- lot actions -->
               {% if lot.is_temporary %}
                 <span class="d-none" id="activeRemoveLotModal" data-bs-toggle="modal" data-bs-target="#btnRemoveLots"></span>
-                <a class="me-2" href="javascript:removeLot()">
-                  <i class="bi bi-trash"></i> Remove Lot
-                </a>
                 <a class="me-2" href="javascript:newTrade('user_from')">
                   <i class="bi bi-arrow-down-right"></i> Add supplier
                 </a>
-                <a href="javascript:newTrade('user_to')">
+                <a class="me-2" href="javascript:newTrade('user_to')">
                   <i class="bi bi-arrow-up-right"></i> Add receiver
+                </a>
+                <a class="text-danger" href="javascript:removeLot()">
+                  <i class="bi bi-trash"></i> Delete Lot
                 </a>
               {% endif %}
             </div>
