--- a/ereuse_devicehub/templates/inventory/removelot.html
+++ b/ereuse_devicehub/templates/inventory/removelot.html
@@ -3,21 +3,21 @@
     <div class="modal-content">
 
       <div class="modal-header">
-        <h5 class="modal-title">Remove Lot</h5>
+        <h5 class="modal-title">Delete Lot</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
         <div class="modal-body">
-            Are you sure that you want to remove lot <strong>{{ lot.name }}</strong>?
+            Are you sure that you want to delete lot <strong>{{ lot.name }}</strong>?
             <p class="text-danger">
-               There are devices in this lot, are you sure you want to delete it?
+              This action cannot be undone.
             </p>
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <a href="{{ url_for('inventory.lot_del', id=lot.id)}}" type="button" class="btn btn-primary">
-            Confirm
+          <button type="button" class="btn btn-secondary-outline" data-bs-dismiss="modal">Cancel</button>
+          <a href="{{ url_for('inventory.lot_del', id=lot.id)}}" type="button" class="btn btn-danger">
+            Delete it!
           </a>
         </div>
 
