Rename removelot.html -> lot_delete_modal.html

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -400,7 +400,7 @@
 {% include "inventory/addDeviceslot.html" %}
 {% include "inventory/addDevicestag.html" %}
 {% include "inventory/removeDeviceslot.html" %}
-{% include "inventory/removelot.html" %}
+{% include "inventory/lot_delete_modal.html" %}
 {% include "inventory/actions.html" %}
 {% include "inventory/allocate.html" %}
 {% include "inventory/data_wipe.html" %}
