Refactor to reduche changes code

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -299,7 +299,7 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th scope="col" style="min-with: 14px">Select</th>
+                      <th scope="col">Select</th>
                       <th scope="col">Title</th>
                       <th scope="col">DHID</th>
                       <th scope="col">Tags</th>
