Fix start search info

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -17,6 +17,9 @@
       <button type="submit" title="Search"><i class="bi bi-search"></i></button>
 
       <ul class="dropdown-menu" autoClose="outside" aria-labelledby="dropdownSearch" id="dropdown-search-list" style="min-width: 100px;">
+        <li class="dropdown-header"><h6 class="dropdown-header">You can search:</h6></li>
+        <li class="dropdown-item"><i class="bi bi-laptop"></i> Devices <span class="badge bg-secondary" style="float: right;">DHID</span></li>
+        <li class="dropdown-item"><i class="bi bi-folder2"></i> lots <span class="badge bg-secondary" style="float: right;">Name</span></li>
       </ul>
     </form>
   </div><!-- End Search Bar -->
