Avoid hide dropdown when user clicked inside

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -78,7 +78,7 @@
                   Lots
                   <span class="caret"></span>
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="btnLots" style="width: 300px;">
+                <ul class="dropdown-menu" aria-labelledby="btnLots" style="width: 300px;" id="dropDownLotsSelector">
                   <h6 class="dropdown-header">Select some devices to manage lots</h6>
                   <ul style="list-style-type: none; margin: 0; padding: 0;" class="mx-3" id="LotsSelector"></ul>
                   <li><hr /></li>
