Fix button spacing

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -72,7 +72,7 @@
           <div class="tab-content pt-5">
             <div id="devices-list" class="tab-pane fade devices-list active show">
 
-              <div class="btn-group dropdown ml-1">
+              <div class="btn-group dropdown m-1">
                 <button id="btnLots" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                   <i class="bi bi-folder2"></i>
                   Lots
@@ -94,7 +94,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="btn-group dropdown ml-1" uib-dropdown="">
+              <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnActions" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-plus"></i>
                     New Actions
@@ -181,7 +181,7 @@
                 </ul>
               </div>
 
-              <div class="btn-group dropdown ml-1" uib-dropdown="">
+              <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnExport" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-reply"></i>
                     Exports
@@ -215,7 +215,7 @@
                 </ul>
               </div>
 
-              <div class="btn-group dropdown ml-1" uib-dropdown="">
+              <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnTags" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-tag"></i>
                     Tags
@@ -249,7 +249,7 @@
                 </ul>
               </div>
 
-              <div class="btn-group dropdown ml-1" uib-dropdown="">
+              <div class="btn-group dropdown m-1" uib-dropdown="">
                 <button id="btnSnapshot" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-laptop"></i>
                     New Device
